--- a/mobile.css
+++ b/mobile.css
@@ -130,23 +130,36 @@ body {
     margin: 0.5ex;
 }
 
+.genome>ol {
+    padding: 0;
+}
+
 .genome.locked {
     cursor: text
 }
 
-.genome>ol {
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding: 0;
+.genome .codon {
+    display: inline-block;
+    margin: 0 0.5ex;
     border: 1px solid black;
 
     background-color: white;
 }
 
+.genome .codon>ol {
+    padding: 1ex 0.5em;
+}
+
+.genome .codon .amino-acid {
+    border-top: 1px solid black;
+    text-align: center;
+    padding-top: 0.5ex;
+    padding-bottom: 0.5ex;
+}
+
 .genome .nucleotide {
     display: inline-block;
-    height: 32px;
-    width: 32px;
+    width: 28px;
     font-size: 18px;
     text-align: center;
     flex-wrap: wrap;
@@ -156,6 +169,4 @@ body {
 
 .genome .nucleotide span {
     display: inline-block;
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
