--- a/mobile.css
+++ b/mobile.css
@@ -13,6 +13,11 @@ body {
     bottom: 0;
 }
 
+button {
+    margin: revert;
+    padding: revert;
+}
+
 #errors {
     position: fixed;
     display: block;
